k8s/server/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: server
  namespace: cab-booking

spec:
  type: ClusterIP

  selector:
    app: server

  ports:
    - name: http
      port: 5005
      targetPort: 5005
      protocol: TCP
